--- a/Backtracking/index.html
+++ b/Backtracking/index.html
@@ -1,7 +1,7 @@
 <html><head>
 
 <title>Backtracking</title>
-
+<h1>Backtracking</h1>
 <p>Copyright ©2002 by David Matuszek</p> 
 <p>Backtracking is a form of recursion.</p>
 <p>The usual scenario is that you are faced with a number of options, and you 
