--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   that got you here, and try another choice at that node. If you end up at the 
   root with no options left, there are no good leaves to be found.</p>
 <p>This needs an example.</p>
-<p align="center"><img src="./img/treesearch.gif" height="136" width="259" /></p>
+<p align="center"><img src="./Backtracking/img/treesearch.gif" height="136" width="259" /></p>
 <ol>
   <li>Starting at Root, your options are A and B. You choose A.</li>
   <li>At A, your options are C and D. You choose C.</li>
@@ -209,7 +209,7 @@
   a binary tree, we will say that a node might or might not be a goal node, and 
   will contain its name. The first example in this paper (which we repeat here) 
   shows a binary tree.</p>
-<p align="center"><img src="./img/treesearch.gif" height="136" width="259" /></p>
+<p align="center"><img src="./Backtracking/Backtracking/img/treesearch.gif" height="136" width="259" /></p>
 <p>Here's a definition of the BinaryTree class:</p>
 <blockquote>
   <pre>public class BinaryTree {
@@ -537,21 +537,21 @@ it can never be <code>true</code>, and the controlled code will be discarded.
   a free space in between.</p>
 <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
   <tbody><tr>
-    <td width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-    <td width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
     <td width="44">&nbsp;</td>
-    <td width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-    <td width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
   </tr>
 </tbody></table>
 <p>The goal is to reverse the positions of the marbles:</p>
 <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
   <tbody><tr> 
-    <td width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-    <td width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
     <td width="44">&nbsp;</td>
-    <td width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-    <td width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+    <td width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
   </tr>
 </tbody></table>
 <p>The black marbles can only move to the right, and the white marbles can only 
@@ -568,11 +568,11 @@ it can never be <code>true</code>, and the controlled code will be discarded.
     <td> 
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
-          <td width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
+          <td width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
           <td width="44">&nbsp;</td>
-          <td width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-          <td width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+          <td width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+          <td width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
         </tr>
       </tbody></table>
     </td>
@@ -582,11 +582,11 @@ it can never be <code>true</code>, and the controlled code will be discarded.
     <td> 
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
           <td height="44" width="44">&nbsp;</td>
           <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
         </tr>
       </tbody></table>
     </td>
@@ -596,11 +596,11 @@ it can never be <code>true</code>, and the controlled code will be discarded.
     <td> 
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
           <td height="44" width="44">&nbsp;</td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
         </tr>
       </tbody></table>
     </td>
@@ -610,11 +610,11 @@ it can never be <code>true</code>, and the controlled code will be discarded.
     <td> 
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
           <td height="44" width="44"><img src="backtracking_files/white-ball.gif" height="44" width="44" /></td>
           <td height="44" width="44">&nbsp;</td>
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
         </tr>
       </tbody></table>
     </td>
@@ -625,10 +625,10 @@ it can never be <code>true</code>, and the controlled code will be discarded.
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
           <td height="44" width="44">&nbsp;</td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
         </tr>
       </tbody></table>
     </td>
@@ -639,10 +639,10 @@ it can never be <code>true</code>, and the controlled code will be discarded.
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
           <td height="59" width="44">&nbsp;</td>
-          <td height="59" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
-          <td height="59" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="59" width="44"><img src="./img/black-ball.gif" height="44" width="44" /></td>
-          <td height="59" width="44"><img src="./img/white-ball.gif" height="44" width="44" /></td>
+          <td height="59" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
+          <td height="59" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td height="59" width="44"><img src="./Backtracking/img/black-ball.gif" height="44" width="44" /></td>
+          <td height="59" width="44"><img src="./Backtracking/img/white-ball.gif" height="44" width="44" /></td>
         </tr>
       </tbody></table>
     </td>
