--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   that got you here, and try another choice at that node. If you end up at the 
   root with no options left, there are no good leaves to be found.</p>
 <p>This needs an example.</p>
-<p align="center"><img src="./img/treesearch.gif" height="136" width="259" /></p>
+<p align="center"><img src="Backtracking\img\treesearch.gif" height="136" width="259" /></p>
 <ol>
   <li>Starting at Root, your options are A and B. You choose A.</li>
   <li>At A, your options are C and D. You choose C.</li>
