--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ it can never be <code>true</code>, and the controlled code will be discarded.
       <table align="center" bgcolor="#dddddd" border="1" cellpadding="6" cellspacing="0">
         <tbody><tr> 
           <td height="44" width="44"><img src="Backtracking/img/black-ball.gif" height="44" width="44" /></td>
-          <td height="44" width="44"><img src="Backtracking/white-ball.gif" height="44" width="44" /></td>
+          <td height="44" width="44"><img src="Backtracking/img/white-ball.gif" height="44" width="44" /></td>
           <td height="44" width="44">&nbsp;</td>
           <td height="44" width="44"><img src="Backtracking/img/black-ball.gif" height="44" width="44" /></td>
           <td height="44" width="44"><img src="Backtracking/img/white-ball.gif" height="44" width="44" /></td>
