--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <title>Backtracking</title>
 <h1>Backtracking</h1>
+<div class="superman">
 <p>Copyright ©2002 by David Matuszek</p> 
 <p>Backtracking is a form of recursion.</p>
 <p>The usual scenario is that you are faced with a number of options, and you 
@@ -748,4 +749,7 @@ it can never be <code>true</code>, and the controlled code will be discarded.
   the actual output in order to emphasize this point. Backtracking always produces 
   its results (sequence of choices) in reverse order; it is up to you, the programmer, 
   to reverse the results again to get them in the correct order.</p>
-</body></html>
+
+</body>
+</div>
+</html>
