--- a/Restraunt Page/index.html
+++ b/Restraunt Page/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleSheet.css">
   <title>homework website!</title>
 </head>
 
@@ -82,7 +82,7 @@
     </section>
 
     <section class="about">
-      <img src="images/queso-taco.png" alt="Yummy Taco" class="about__mockup">
+      <img src="IMG/queso-taco.png" alt="Yummy Taco" class="about__mockup">
       <div class="about__details">
         <h2>Featured Taco</h2>
         <p>Slim Profile, easy to hold and loaded with cheese.</p>
@@ -98,16 +98,16 @@
 
     <section class="gallery">
       <h2>Instant Grams</h2>
-      <img src="images/food 1.jpg" alt="">
-      <img src="images/food 2.jpg" alt="">
-      <img src="images/food 3.jpg" alt="">
-      <img src="images/food 4.jpg" alt="">
-      <img src="images/food 5.jpg" alt="">
-      <img src="images/food 6.jpg" alt="">
-      <img src="images/food 7.jpg" alt="">
-      <img src="images/food 8.jpg" alt="">
-      <img src="images/food 9.jpg" alt="">
-      <img src="images/food 10.jpg" alt="">
+      <img src="IMG/food 1.jpg" alt="">
+      <img src="IMG/food 2.jpg" alt="">
+      <img src="IMG/food 3.jpg" alt="">
+      <img src="IMG/food 4.jpg" alt="">
+      <img src="IMG/food 5.jpg" alt="">
+      <img src="IMG/food 6.jpg" alt="">
+      <img src="IMG/food 7.jpg" alt="">
+      <img src="IMG/food 8.jpg" alt="">
+      <img src="IMG/food 9.jpg" alt="">
+      <img src="IMG/food 10.jpg" alt="">
     </section>
  </div>
 
