--- a/Restraunt Page/index.html
+++ b/Restraunt Page/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <link rel="stylesheet" href="styleSheet.css">
-  <title>homework website!</title>
+  <title>Restraunt Page</title>
 </head>
 
 <body>
